# RainySteamRecord

./: .gitignore  AGENTS.md  README.md  README_EN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
locales/: en-US.json  zh-CN.json
scripts/: check-version.mjs
src/: App.tsx  main.tsx
src-node/: index.ts
src-node/ipc/: handlers.ts  protocol.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clip.rs  config.rs  ffmpeg.rs  lib.rs  main.rs  mpv.rs  process_job.rs  sidecar.rs  steam.rs  streaming.rs  update.rs
src/__tests__/: clip-library.test.ts  clip-loading.test.ts  export-jobs.test.ts  locales.test.ts  overlay.test.ts  time.test.ts
src/components/: BottomBar.tsx  ClipCard.tsx  ClipDetailsDialog.tsx  ClipGrid.tsx  ConfirmDialog.tsx  ExportJobCenter.tsx  FilterBar.tsx  SettingsDialog.tsx  SteamVersionPicker.tsx  TitleBar.tsx  ToastViewport.tsx  VideoPreviewDialog.tsx
src/lib/: clip-library.ts  i18n.ts  overlay.ts  tauri-bridge.ts  theme.ts  thumbnail-cache.ts  time.ts
src/stores/: app.ts  export-jobs.ts  toast.ts
src/styles/: globals.css
