[package]
name = "rainy-steam-record"
version = "0.1.1"
description = "A modern GUI tool to browse and export Steam game recordings"
license = "GPL-3.0"
edition = "2021"

[lib]
name = "rainy_steam_record_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
crc32fast = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sanitize-filename = "0.6"
log = "0.4"
trash = "5"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
